syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.unimal.proto.notification.authentication";
option java_outer_classname = "MailAuthRequestProto";

service MailAuthRequestService {
  rpc sendMailAuthRequest (MailAuthRequestSendRequest) returns (MailAuthRequestSendResponse);
}

message MailAuthRequestSendRequest {
  string email = 1;
}

message MailAuthRequestSendResponse {}